GatewayAPI/manifests/envoy-gateway-https.yaml
apiVersion: gateway.networking.k8s.io/v1  
kind: Gateway  
metadata:  
  name: envoy-gateway-https
  namespace:  envoy-gateway-system
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
spec:  
  gatewayClassName: envoy-gateway-class  # References the Envoy Gateway GatewayClass  
  listeners:  
  - name: http  
    protocol: HTTP  
    port: 80
    allowedRoutes:
      namespaces:
        from: All
  - name: https
    protocol: HTTPS
    port: 443
    hostname: "*.dev.local"
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: envoy-tls-secret
