GatewayAPI/manifests/envoy-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1  
kind: Gateway  
metadata:  
  name: envoy-gateway  
  namespace:  envoy-gateway-system  
spec:  
  gatewayClassName: envoy-gateway-class  # References the Envoy Gateway GatewayClass
  listeners:  
  - name: http  
    protocol: HTTP  
    port: 80  
    allowedRoutes:  
      namespaces:  
        from: All
